syntax = "proto3";

package docker.cluster.api;

import "types.proto";
import "objects.proto";
import "proxy.proto";
import "gogoproto/gogo.proto";

// CA defines the RPC methods for requesting certificates from a CA.

service CA {
	rpc IssueCertificate(IssueCertificateRequest) returns (IssueCertificateResponse) {}
	rpc CertificateStatus(CertificateStatusRequest) returns (CertificateStatusResponse) {}
	rpc GetRootCACertificate(GetRootCACertificateRequest) returns (GetRootCACertificateResponse) {
		option (dont_proxy) = { };
	}
}

message CertificateStatusRequest {
	string token = 1;
}

message CertificateStatusResponse {
	IssuanceStatus status = 1;
	RegisteredCertificate registered_certificate = 2;
}

message IssueCertificateRequest {
	string role = 1;
	bytes csr = 2 [(gogoproto.customname) = "CSR"];
}

message IssueCertificateResponse {
	string token = 1;
}

message GetRootCACertificateRequest {}

message GetRootCACertificateResponse {
	bytes certificate = 1;
}
